--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 <body>
     <div class="question-container">
         <span class="question">
-            Quel âge avez-vous ?
+            question: Quel est votre genre (homme ou femme ?),
         </span>
         <span class="nombre-de-questions">
-            1 / 5
+            1 / 3
         </span>
         <form class="reponse-container">
             <input type="text" name="reponse" id="reponse" placeholder="Ecrivez votre réponse ici...">
-            <input type="submit" id="bouton">
+            <button type="submit" id="bouton">Suivant</button>
         </form>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
